# constant

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: test.yml
const_internals/: Cargo.toml
const_internals/src/: constdef.rs  lib.rs  utils.rs
const_internals/src/constdef/: process_types.rs
constant/: Cargo.toml
constant/src/: constdef_impls.rs  lib.rs
constant/tests/: basic.rs  nested_structs.rs
