[package]
name = "const_internals"
version = "0.0.1"
edition = "2018"
license = "Apache-2.0"
description = "Internal macros for the constant crate. Not for external use!"
authors = ["Sayan Nandan <nandansayan@outlook.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
