[package]
name = "const_internals"
version = "0.2.0"
edition = "2018"
license = "Apache-2.0"
description = "Internal macros for the constant crate. Not for external use!"
documentation = "https://docs.rs/constant"
repository = "https://github.com/ohsayan/constant"
authors = ["Sayan Nandan <nandansayan@outlook.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.77", features = ["full"] }
quote = "1.0.9"
