[package]
authors = ["Sayan Nandan <nandansayan@outlook.com>"]
description = "Constant evaluation tools for Rust"
documentation = "https://docs.rs/constant"
edition = "2018"
include = ["../const_internals/src/**/*.rs", "src/**/*.rs"]
license = "Apache-2.0"
name = "constant"
readme = "../README.md"
repository = "https://github.com/ohsayan/constant"
version = "0.2.0"

[features]
default = ["const_internals"]

[dependencies]
const_internals = {path = "../const_internals", version = "0.2.0", optional = true}

[dev-dependencies]
const_internals = {path = "../const_internals"}
